k8s_files/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-deployment
  labels:
    app: go-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web-app
        image: monish247/go-webapp-deploy:v2
        ports:
        - containerPort: 8080
