k8s_files/manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-service
spec:
  selector:
   app: Go-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
