k8s_files/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Go-web-app-ingress
spec:
  rules:
  - host: go-web-app.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-web-service
            port:
              number: 80
